--- a/HW1/HW1.ipynb
+++ b/HW1/HW1.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "***\n",
     "\n",
-    "## Problem 1"
+    "## Problem 1\n",
+    "\n",
+    "Compare the performance of three mean estimators: empirical mean, trimmed mean, and the median-of-means mean estimator. Generate distributions for both light (such as Gaussian, Laplace) and heavy tailed distributions (such as the Pareto family or Student’s t-distribution with di↵erent degrees of freedom)"
    ]
   },
   {
@@ -262,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Laplace distribution"
+    "### Laplace distribution"
    ]
   },
   {
@@ -323,7 +325,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Student's distribution"
+    "### Student's distribution\n",
+    "\n",
+    "Degrees of freedom from 1 < df ≤ 2 the variance does not exist and as df increase the student-t distribution tends to a normal distribution. In order to show interesting cases in the analysis of different mean estimators, we will analyze two specific cases: one, with infinite variance df = 2 ,and another one, with df = 5, which has fatter tails than a normal distribution but the variance exists."
    ]
   },
   {
@@ -522,7 +526,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem 4"
+    "## Problem 4\n",
+    "\n",
+    "Random projections illustration."
    ]
   },
   {
