--- a/HW2/HW2.ipynb
+++ b/HW2/HW2.ipynb
@@ -18,7 +18,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 5"
+    "# Exercise 5\n",
+    "\n",
+    "Binary classification. \n",
+    "\n",
+    "Plotting class-conditional distributions and η(x) = P(Y = 1 | X = x)"
    ]
   },
   {
@@ -73,15 +77,21 @@
    "metadata": {},
    "source": [
     "# Exercise 7\n",
-    "## Part1"
+    "\n",
+    "Binary classification with KNN\n",
+    "\n",
+    "## Part1\n",
+    "\n",
+    "Classify data using 1,3,5,7,9 -NN varying the dimensions (d) and size of sample (n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Estimating risk for classification rule (K-NN) given n and d with MonteCarlo\n",
     "def K_class_risk(K,n,d,redraws,cv=10):\n",
     "    \n",
     "    mean_risk = []\n",
@@ -138,6 +148,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Plotting results\n",
+    "\n",
     "fig,axes= plt.subplots(nrows = 1, ncols = 3, figsize = (15,5),sharey=True,sharex = True)\n",
     "\n",
     "for i,n in enumerate(ns):\n",
@@ -161,7 +173,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Part 2"
+    "## Part 2\n",
+    "\n",
+    "Estimating the probability of error of best rule found by empirical risk minimization (using independent test data) and comparing it to the probability of error of the best of these five classification rules."
    ]
   },
   {
