--- a/HW4/HW4.ipynb
+++ b/HW4/HW4.ipynb
@@ -17,6 +17,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 15\n",
+    "\n",
+    "Linear classifier by performing stochastic gradient-descent minimization of different loss functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 92,
    "metadata": {},
@@ -56,6 +65,7 @@
     "        \n",
     "        return sum([Y_test[i]!=Y_hat[i] for i,_ in enumerate(Y_test)])/len(Y_test)\n",
     "    \n",
+    "    # Stochastic gradient descent minimization algorithm\n",
     "    def SGD(self,X_train,Y_train,max_iter,ax,eta):\n",
     "    \n",
     "        # Initializing weight vector\n",
@@ -133,6 +143,8 @@
     "    X,Y = np.split(aux,[-1],axis=1)\n",
     "    return(X,Y.T[0])\n",
     "\n",
+    "\n",
+    "# Estimating risk by montecarlo function\n",
     "def  estimate_error (n,d,a, rep=500):\n",
     "\n",
     "    np.random.seed(1)\n",
